# minibeads

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PROJECT_VISION.md  README.md  TODO_test_import.md  build.rs  purge-bd-upstream.sh
.beads/: config.yaml  github-sync-state.json
.beads/comments/: minibeads-31.json
.beads/issues/: minibeads-1.md  minibeads-10.md  minibeads-11.md  minibeads-12.md  minibeads-13.md  minibeads-14.md  minibeads-15.md  minibeads-16.md  minibeads-17.md  minibeads-18.md  minibeads-19.md  minibeads-2.md  minibeads-20.md  minibeads-21.md  minibeads-22.md  minibeads-23.md  minibeads-24.md  minibeads-25.md  minibeads-26.md  minibeads-27.md  minibeads-28.md  minibeads-29.md  minibeads-3.md  minibeads-30.md  minibeads-31.md  minibeads-32.md  minibeads-33.md  minibeads-34.md  minibeads-35.md  minibeads-36.md  minibeads-4.md  minibeads-5.md  minibeads-7.md  minibeads-8.md  minibeads-9.md
.github/workflows/: ci.yml
benches/: benchmark.sh
scratch/mtg_example/.beads/issues/: workspace-6.md~
src/: beads_generator.rs  code_patch.rs  format.rs  github.rs  hash.rs  lib.rs  lock.rs  main.rs  storage.rs  sync.rs  types.rs
tests/: basic_operations.sh  beads_generator.rs  claim.sh  e2e_tests.rs  export_interop.sh  hash_id_migration.sh  help_version.sh  random_import_upstream_json.rs  random_minibeads.rs  ready_filters.sh  search_replace.sh
