[package]
name = "minibeads"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
filetime = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "processthreadsapi", "winnt"] }

[dev-dependencies]
dir-test = "0.4"

[build-dependencies]
built = { version = "0.7", features = ["git2"] }
chrono = "0.4"
