[package]
name = "minibeads"
version = "0.6.0"
edition = "2021"

[[bin]]
name = "mb"
path = "src/main.rs"

[[bin]]
name = "test_minibeads"
path = "src/bin/test_minibeads.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
filetime = "0.2"
rand = "0.8"
tempfile = "3.13"
similar-asserts = "1.6"
sha2 = "0.10"
tokio = { version = "1.41", features = ["rt-multi-thread", "process", "time", "sync"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "processthreadsapi", "winnt"] }

[dev-dependencies]
dir-test = "0.4"

[build-dependencies]
built = { version = "0.7", features = ["git2"] }
chrono = "0.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
